add view section

--- a/index.html
+++ b/index.html
@@ -1,38 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./scss/style.css">
     <title>Interno</title>
 </head>
+
 <body>
     <div class="wrapper">
         <header class="header">
             <div class="header__container">
-               <img src="./scss/img/header/logo.svg" alt="logo" class="header__logo">
-               <nav class="header__menu menu">
-               <div class="menu__body">
-                    <ul class="menu__list">
-                        <li class="menu__item">
-                            <a href="" class="menu__link">Home</a>
-                        </li>
-                        <li class="menu__item">
-                            <a href="" class="menu__link">About Us</a>
-                        </li>
-                        <li class="menu__item">
-                            <a href="" class="menu__link">Services</a>
-                        </li>
-                        <li class="menu__item">
-                            <a href="" class="menu__link">Pages</a>
-                        </li>
-                        <li class="menu__item">
-                            <a href="" class="menu__link">Contact Us</a>
-                        </li>
-                    </ul>
-               </div>
-               </nav>
-               <button class="icon-menu"><span></span></button>
+                <img src="./scss/img/header/logo.svg" alt="logo" class="header__logo">
+                <nav class="header__menu menu">
+                    <div class="menu__body">
+                        <ul class="menu__list">
+                            <li class="menu__item">
+                                <a href="" class="menu__link">Home</a>
+                            </li>
+                            <li class="menu__item">
+                                <a href="" class="menu__link">About Us</a>
+                            </li>
+                            <li class="menu__item">
+                                <a href="" class="menu__link">Services</a>
+                            </li>
+                            <li class="menu__item">
+                                <a href="" class="menu__link">Pages</a>
+                            </li>
+                            <li class="menu__item">
+                                <a href="" class="menu__link">Contact Us</a>
+                            </li>
+                        </ul>
+                    </div>
+                </nav>
+                <button class="icon-menu"><span></span></button>
             </div>
         </header>
         <main class="main">
@@ -44,15 +46,63 @@
                     <p class="hero__text">
                         The world needs innovators and problem solvers who turn challenges into greater opportunities.
                     </p>
-                    <button class="hero__button button"><p class="hero__button-text button-text">Get Started</p><img src="./scss/img/hero/Arrow.svg" alt="arrow"></button>
+                    <button class="hero__button button">
+                        <p class="hero__button-text button-text">Get Started</p><img src="./scss/img/hero/Arrow.svg"
+                            alt="arrow">
+                    </button>
                 </div>
             </section>
             <section class="view">
-                <div class="view__container"></div>
+                <div class="view__container">
+                    <h2 class="view__title">
+                        View
+                    </h2>                    <ul class="view__list">
+                        <li class="view__item item-view">
+                            <h5 class="item-view__title">
+                                Interior Design
+                            </h5>
+                            <p class="item-view__text">
+                                Enhancing the interior to achieve a healthier environment for the people using right
+                                space.
+                            </p>
+                            <a href="" class="item-view__link link-item-view">
+                                <p class="link-item-view__text">View More</p>
+                                <img src="./scss/img/view/Arrow.svg" alt="arrow" class="link-item-view__img">
+                            </a>
+                        </li>
+                        <li class="view__item item-view">
+                            <h5 class="item-view__title">
+                                Furniture
+                            </h5>
+                            <p class="item-view__text">
+                                Movable articles that are used to make a room or building suitable for living or
+                                working.
+                            </p>
+                            <a href="" class="item-view__link link-item-view">
+                                <p class="link-item-view__text">View More</p>
+                                <img src="./scss/img/view/Arrow.svg" alt="arrow" class="link-item-view__img">
+                            </a>
+                        </li>
+                        <li class="view__item item-view">
+                            <h5 class="item-view__title">
+                                Flooring
+                            </h5>
+                            <p class="item-view__text">
+                                Thin object any finished material applied over a floor structure to provide a walking
+                                surface.
+                            </p>
+                            <a href="" class="item-view__link link-item-view">
+                                <p class="link-item-view__text">View More</p><img src="./scss/img/view/Arrow.svg"
+                                    alt="arrow" class="link-item-view__img">
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </section>
         </main>
         <footer class="footer"></footer>
     </div>
     <script src="./js/script.js"></script>
 </body>
+
 </html>
