add section designs and  what

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="wrapper">
         <header class="header">
             <div class="header__container">
-                <img src="./scss/img/header/logo.svg" alt="logo" class="header__logo">
+                <a href=""><img src="./scss/img/header/logo.svg" alt="logo" class="header__logo"></a>
                 <nav class="header__menu menu">
                     <div class="menu__body">
                         <ul class="menu__list">
@@ -40,23 +40,27 @@
         <main class="main">
             <section class="hero">
                 <div class="hero__container">
-                    <h1 class="hero__title">
-                        Let's Create Your Dream Interior
-                    </h1>
-                    <p class="hero__text">
-                        The world needs innovators and problem solvers who turn challenges into greater opportunities.
-                    </p>
-                    <button class="hero__button button">
-                        <p class="hero__button-text button-text">Get Started</p><img src="./scss/img/hero/Arrow.svg"
-                            alt="arrow">
-                    </button>
+                    <div class="hero__wrapper-content">
+                        <h1 class="hero__title">
+                            Let's Create Your Dream Interior
+                        </h1>
+                        <p class="hero__text">
+                            The world needs innovators and problem solvers who turn challenges into greater
+                            opportunities.
+                        </p>
+                        <button class="hero__button button">
+                            <p class="hero__button-text button-text">Get Started</p><img src="./scss/img/hero/Arrow.svg"
+                                alt="arrow">
+                        </button>
+                    </div>
                 </div>
             </section>
             <section class="view">
                 <div class="view__container">
                     <h2 class="view__title">
                         View
-                    </h2>                    <ul class="view__list">
+                    </h2>
+                    <ul class="view__list">
                         <li class="view__item item-view">
                             <h5 class="item-view__title">
                                 Interior Design
@@ -95,6 +99,81 @@
                                 <p class="link-item-view__text">View More</p><img src="./scss/img/view/Arrow.svg"
                                     alt="arrow" class="link-item-view__img">
                             </a>
+                        </li>
+                    </ul>
+                </div>
+            </section>
+            <section class="designs">
+                <div class="designs__container">
+                    <div class="designs__content content-designs">
+                        <h2 class="content-designs__title title">We Tackle The Most Challenging Designs</h2>
+                        <div class="content-designs__text">
+                            <p>The world needs innovators and problem solvers who turn challenges into greater
+                                opportunities. We have an insatiable curiosity about transformative trends challenging
+                                the status.</p>
+                        </div>
+                        <div class="content-designs__calls calls-content-designs">
+                            <div class="calls-content-designs__img">
+                                <img src="./scss/img/designs/icon.svg" alt="icon">
+                            </div>
+                            <div class="calls-content-designs__wrapper">
+                                <a href="tel:012345678" class="calls-content-designs__number">012345678</a>
+                                <p class="calls-content-designs__text">Call Us Anytime</p>
+                            </div>
+                        </div>
+                        <button class="designs__button button">
+                            <p class="designs__button-text button-text">Get Free Estimate</p><img
+                                src="./scss/img/hero/Arrow.svg" alt="arrow">
+                        </button>
+                    </div>
+                    <div class="designs__image image-designs">
+                        <div class="image-designs__image">
+                            <img src="./scss/img/designs/image.jpg" alt="image of designs">
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="what">
+                <div class="what__container">
+                    <h2 class="what__title title title--center">
+                        What the People Thinks About Interno
+                    </h2>
+                    <ul class="what__list">
+                        <li class="what__item item-what">
+                            <div class="item-what__user user-what">
+                                <img src="./scss/img/what/user1.jpg" alt="user" class="user-what__image">
+                                <div class="user-what__content">
+                                    <p class="user-what__name">Lisa Clairton</p>
+                                    <p class="user-what__city">New York, USA</p>
+                                </div>
+                            </div>
+                            <div class="item-what__text">
+                                <p>We selected Interno interior because of rigorous design background & education.</p>
+                            </div>
+                        </li>
+                        <li class="what__item item-what">
+                            <div class="item-what__user user-what">
+                                <img src="./scss/img/what/user2.jpg" alt="user" class="user-what__image">
+                                <div class="user-what__content">
+                                    <p class="user-what__name">Lisa Clairton</p>
+                                    <p class="user-what__city">New York, USA</p>
+                                </div>
+                            </div>
+                            <div class="item-what__text">
+                                <p>We selected Interno interior because of rigorous design background & education.</p>
+                            </div>
+                        </li>
+                        <li class="what__item item-what">
+                            <div class="item-what__user user-what">
+                                <img src="./scss/img/what/user3.jpg" alt="user" class="user-what__image">
+                                <div class="user-what__content">
+                                    <p class="user-what__name">Lisa Clairton</p>
+                                    <p class="user-what__city">New York, USA</p>
+                                </div>
+                            </div>
+                            <div class="item-what__text">
+                                <p>We selected Interno interior because of rigorous design background & education.</p>
+                            </div>
                         </li>
                     </ul>
                 </div>
