add brand section

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" type="image/svg" href="./scss/img/header/small-logo.svg" class="logo-title">
     <link rel="stylesheet" href="./scss/style.css">
     <title>Interno</title>
 </head>
@@ -174,6 +175,28 @@
                             <div class="item-what__text">
                                 <p>We selected Interno interior because of rigorous design background & education.</p>
                             </div>
+                        </li>
+                    </ul>
+                </div>
+            </section>
+            <section class="brand">
+                <div class="brand__container">
+                    <h2 class="brand__title">Brand</h2>
+                    <ul class="brand__list">
+                        <li class="brand__item">
+                            <img src="./scss/img/brand/icon1.svg" alt="icon" class="brand__img">
+                        </li>
+                        <li class="brand__item">
+                            <img src="./scss/img/brand/icon2.svg" alt="icon" class="brand__img">
+                        </li>
+                        <li class="brand__item">
+                            <img src="./scss/img/brand/icon3.svg" alt="icon" class="brand__img">
+                        </li>
+                        <li class="brand__item">
+                            <img src="./scss/img/brand/icon4.svg" alt="icon" class="brand__img">
+                        </li>
+                        <li class="brand__item">
+                            <img src="./scss/img/brand/icon5.svg" alt="icon" class="brand__img">
                         </li>
                     </ul>
                 </div>
