add projects section

--- a/index.html
+++ b/index.html
@@ -201,6 +201,97 @@
                     </ul>
                 </div>
             </section>
+            <section class="projects">
+                <div class="projects__container">
+                    <h2 class="projects__title title title--center">Recent Projects</h2>
+                    <div class="projects__text">
+                        <p>With tools to make every part of your process more human and a support team excited to help
+                            you, getting started with us never been easier.</p>
+                    </div>
+                    <ul class="projects__list">
+                        <li class="projects__item item-projects">
+                            <a href="" class="item-projects__link">
+                                <div class="item-projects__image">
+                                    <img src="./scss/img/projects/image1.jpg" alt="image of project">
+                                </div>
+                                <div class="item-projects__wrapper">
+                                    <div class="item-projects__content">
+                                        <h5 class="item-projects__title">
+                                            Winery Dry Creek Building
+                                        </h5>
+                                        <p class="item-projects__text">
+                                            Art Modern
+                                        </p>
+                                    </div>
+                                    <a href="" class="item-projects__button">
+                                        <img src="./scss/img/projects/arrow.svg" alt="arrow">
+                                    </a>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="projects__item item-projects">
+                            <a href="" class="item-projects__link">
+                                <div class="item-projects__image">
+                                    <img src="./scss/img/projects/image2.jpg" alt="image of project">
+                                </div>
+                                <div class="item-projects__wrapper">
+                                    <div class="item-projects__content">
+                                        <h5 class="item-projects__title">
+                                            Creative Workplace Design
+                                        </h5>
+                                        <p class="item-projects__text">
+                                            Minimalist
+                                        </p>
+                                    </div>
+                                    <a href="" class="item-projects__button">
+                                        <img src="./scss/img/projects/arrow.svg" alt="arrow">
+                                    </a>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="projects__item item-projects">
+                            <a href="" class="item-projects__link">
+                                <div class="item-projects__image">
+                                    <img src="./scss/img/projects/image3.jpg" alt="image of project">
+                                </div>
+                                <div class="item-projects__wrapper">
+                                    <div class="item-projects__content">
+                                        <h5 class="item-projects__title">
+                                            Bedroom Interior Pot Work
+                                        </h5>
+                                        <p class="item-projects__text">
+                                            Modern
+                                        </p>
+                                    </div>
+                                    <a href="" class="item-projects__button">
+                                        <img src="./scss/img/projects/arrow.svg" alt="arrow">
+                                    </a>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="projects__item item-projects">
+                            <a href="" class="item-projects__link">
+                                <div class="item-projects__image">
+                                    <img src="./scss/img/projects/image4.jpg" alt="image of project">
+                                </div>
+                                <div class="item-projects__wrapper">
+                                    <div class="item-projects__content">
+                                        <h5 class="item-projects__title">
+                                            Light Ambience Sepia Design
+                                        </h5>
+                                        <p class="item-projects__text">
+                                            Scandinavian
+                                        </p>
+                                    </div>
+                                    <a href="" class="item-projects__button">
+                                        <img src="./scss/img/projects/arrow.svg" alt="arrow">
+                                    </a>
+                                </div>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </section>
         </main>
         <footer class="footer"></footer>
     </div>
