add statistics section

--- a/index.html
+++ b/index.html
@@ -292,6 +292,29 @@
                     </ul>
                 </div>
             </section>
+            <section class="statistics">
+                <div class="statistics__container">
+                    <h2 class="statistics__title">Statistics</h2>
+                    <ul class="statistics__list">
+                        <li class="statistics__item item-statistics">
+                            <p class="item-statistics__number">12</p>
+                            <p class="item-statistics__text">Years Of Experiance</p>
+                        </li>
+                        <li class="statistics__item item-statistics">
+                            <p class="item-statistics__number">5K</p>
+                            <p class="item-statistics__text">Success Project</p>
+                        </li>
+                        <li class="statistics__item item-statistics">
+                            <p class="item-statistics__number">1K</p>
+                            <p class="item-statistics__text">Active Project</p>
+                        </li>
+                        <li class="statistics__item item-statistics">
+                            <p class="item-statistics__number">4K</p>
+                            <p class="item-statistics__text">Happy Customers</p>
+                        </li>
+                    </ul>
+                </div>
+            </section>
         </main>
         <footer class="footer"></footer>
     </div>
