add all section and footer

--- a/index.html
+++ b/index.html
@@ -315,8 +315,286 @@
                     </ul>
                 </div>
             </section>
+            <section class="blogs">
+                <div class="blogs__container">
+                    <h2 class="blogs__title title title--center">
+                        Recent Blogs
+                    </h2>
+                    <div class="blogs__text">
+                        <p>Get updates about our latest trends and techniques used in interior design project works.</p>
+                    </div>
+                    <ul class="blogs__list">
+                        <li class="blogs__item item-blogs">
+                            <a href="" class="item-blogs__link">
+                                <div class="item-blogs__img">
+                                    <h5 class="item-blogs__title">
+                                        Kitchen Design
+                                    </h5>
+                                    <img src="./scss/img/blogs/image1.jpg" alt="image of blogs">
+                                </div>
+                                <p class="item-blogs__text">Residential Interior Designer In New York, USA</p>
+                                <div class="item-blogs__wrapper-content">
+                                    <p class="item-blogs__date">
+                                        November 23, 2021
+                                    </p>
+                                    <div class="item-blogs__icon">
+                                        <img src="./scss/img/blogs/arrow.svg" alt="arrow">
+                                    </div>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="blogs__item item-blogs">
+                            <a href="" class="item-blogs__link">
+                                <div class="item-blogs__img">
+                                    <h5 class="item-blogs__title">
+                                        Living Room
+                                    </h5>
+                                    <img src="./scss/img/blogs/image2.jpg" alt="image of blogs">
+                                </div>
+                                <p class="item-blogs__text">How To Choose The Best Wall Art & Decor House?</p>
+                                <div class="item-blogs__wrapper-content">
+                                    <p class="item-blogs__date">
+                                        November 23, 2021
+                                    </p>
+                                    <div class="item-blogs__icon">
+                                        <img src="./scss/img/blogs/arrow.svg" alt="arrow">
+                                    </div>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="blogs__item item-blogs">
+                            <a href="" class="item-blogs__link">
+                                <div class="item-blogs__img">
+                                    <h5 class="item-blogs__title">
+                                        Minimalist Interior
+                                    </h5>
+                                    <img src="./scss/img/blogs/image3.jpg" alt="image of blogs">
+                                </div>
+                                <p class="item-blogs__text">Tips To Increase The Interior Value Of Your House</p>
+                                <div class="item-blogs__wrapper-content">
+                                    <p class="item-blogs__date">
+                                        November 23, 2021
+                                    </p>
+                                    <div class="item-blogs__icon">
+                                        <img src="./scss/img/blogs/arrow.svg" alt="arrow">
+                                    </div>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="blogs__item item-blogs">
+                            <a href="" class="item-blogs__link">
+                                <div class="item-blogs__img">
+                                    <h5 class="item-blogs__title">
+                                        Kitchen Design
+                                    </h5>
+                                    <img src="./scss/img/blogs/image4.jpg" alt="image of blogs">
+                                </div>
+                                <p class="item-blogs__text">Best Solution For Any Office & Business Interior</p>
+                                <div class="item-blogs__wrapper-content">
+                                    <p class="item-blogs__date">
+                                        November 23, 2021
+                                    </p>
+                                    <div class="item-blogs__icon">
+                                        <img src="./scss/img/blogs/arrow.svg" alt="arrow">
+                                    </div>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="blogs__item item-blogs">
+                            <a href="" class="item-blogs__link">
+                                <div class="item-blogs__img">
+                                    <h5 class="item-blogs__title">
+                                        Living Room
+                                    </h5>
+                                    <img src="./scss/img/blogs/image5.jpg" alt="image of blogs">
+                                </div>
+                                <p class="item-blogs__text">Get Solution For Building Construction Work</p>
+                                <div class="item-blogs__wrapper-content">
+                                    <p class="item-blogs__date">
+                                        November 23, 2021
+                                    </p>
+                                    <div class="item-blogs__icon">
+                                        <img src="./scss/img/blogs/arrow.svg" alt="arrow">
+                                    </div>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="blogs__item item-blogs">
+                            <a href="" class="item-blogs__link">
+
+                                <div class="item-blogs__img">
+                                    <h5 class="item-blogs__title">
+                                        Minimalist Interior
+                                    </h5>
+                                    <img src="./scss/img/blogs/image6.jpg" alt="image of blogs">
+                                </div>
+                                <p class="item-blogs__text">Attain The Best Finish For The Kitchen Cabinets</p>
+                                <div class="item-blogs__wrapper-content">
+                                    <p class="item-blogs__date">
+                                        November 23, 2021
+                                    </p>
+                                    <div class="item-blogs__icon">
+                                        <img src="./scss/img/blogs/arrow.svg" alt="arrow">
+                                    </div>
+                                </div>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </section>
+            <section class="join">
+                <div class="join__container">
+                    <h2 class="join__title title title--center">
+                        Wanna join the interno?
+                    </h2>
+                    <div class="join__text">
+                        <p>Contact Us & Get a Free Consultation</p>
+                    </div>
+                    <button class="join__button button button--light">
+                        <p class="join__button-text button-text">Get Free Estimate</p><img
+                            src="./scss/img/join/Arrow.svg" alt="arrow">
+                    </button>
+                </div>
+            </section>
         </main>
-        <footer class="footer"></footer>
+        <footer class="footer">
+            <div class="footer__container">
+                <ul class="footer__list">
+                    <li class="footer__item item-footer item-footer--first-column">
+                        <a href="" class="item-footer__logo">
+                            <img src="./scss/img/footer/logo.svg" alt="logo">
+                        </a>
+                        <div class="item-footer__text">
+                            <p>We are the leading architect and interior design firm in the world.</p>
+                        </div>
+                        <ul class="item-footer__socials cosials-footer">
+                            <li class="cosials-footer__item">
+                                <a href="" class="cosials-footer__link">
+                                    <img src="./scss/img/footer/facebook.svg" alt="facebook">
+                                </a>
+                            </li>
+                            <li class="cosials-footer__item">
+                                <a href="" class="cosials-footer__link">
+                                    <img src="./scss/img/footer/twitter.svg" alt="twitter">
+                                </a>
+                            </li>
+                            <li class="cosials-footer__item">
+                                <a href="" class="cosials-footer__link">
+                                    <img src="./scss/img/footer/linkedin.svg" alt="linkedin">
+                                </a>
+                            </li>
+                            <li class="cosials-footer__item">
+                                <a href="" class="cosials-footer__link">
+                                    <img src="./scss/img/footer/instagram.svg" alt="instagram">
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="footer__item item-footer">
+                        <h4 class="item-footer__title">
+                            Pages
+                        </h4>
+                        <ul class="item-footer__info info-item-footer">
+                            <li class="info-item-footer__item">
+                                <a href="" class="info-item-footer__link">
+                                    Style Guide
+                                </a>
+                            </li>
+                            <li class="info-item-footer__item">
+                                <a href="" class="info-item-footer__link">
+                                    Protected
+                                </a>
+                            </li>
+                            <li class="info-item-footer__item">
+                                <a href="" class="info-item-footer__link">
+                                    Licenses
+                                </a>
+                            </li>
+                            <li class="info-item-footer__item">
+                                <a href="" class="info-item-footer__link">
+                                    Changelog
+                                </a>
+                            </li>
+                            <li class="info-item-footer__item">
+                                <a href="" class="info-item-footer__link">
+                                    404
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="footer__item item-footer">
+                        <h4 class="item-footer__title">
+                            Explore
+                        </h4>
+                        <ul class="item-footer__info info-item-footer">
+                            <li class="info-item-footer__item">
+                                <a href="" class="info-item-footer__link">
+                                    About Us
+                                </a>
+                            </li>
+                            <li class="info-item-footer__item">
+                                <a href="" class="info-item-footer__link">
+                                    Recent Blog
+                                </a>
+                            </li>
+                            <li class="info-item-footer__item">
+                                <a href="" class="info-item-footer__link">
+                                    Pricing Plan
+                                </a>
+                            </li>
+                            <li class="info-item-footer__item">
+                                <a href="" class="info-item-footer__link">
+                                    Our Projects
+                                </a>
+                            </li>
+                            <li class="info-item-footer__item">
+                                <a href="" class="info-item-footer__link">
+                                    Contact Us
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="footer__item item-footer">
+                        <h4 class="item-footer__title">
+                            Contact
+                        </h4>
+                        <ul class="item-footer__info info-item-footer">
+                            <li class="info-item-footer__item">
+                                <a href="" class="info-item-footer__link info-item-footer__link--limited">
+                                    53, East Birchwood Ave. Brooklyn, New York 11201, USA.
+                                </a>
+                            </li>
+                            <li class="info-item-footer__item">
+                                <a href="mailto:contact@interno.com" class="info-item-footer__link">
+                                    contact@interno.com
+                                </a>
+                            </li>
+                            <li class="info-item-footer__item">
+                                <a href="tel:123 456 - 7890" class="info-item-footer__link">
+                                    (123) 456 - 7890
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+            <div class="footer__copyright copyright-footer">
+                <ul class="copyright-footer__list">
+                    <li class="copyright-footer__item">
+                        Copyright © Interno | Designed by
+                    </li>
+                    <li class="copyright-footer__item">
+                        Victorflow
+                    </li>
+                    <li class="copyright-footer__item">
+                        Templates - Powered by
+                    </li>
+                    <li class="copyright-footer__item">
+                        Webflow
+                    </li>
+                </ul>
+            </div>
+        </footer>
     </div>
     <script src="./js/script.js"></script>
 </body>
